{
  "version": 4,
  "terraform_version": "1.11.3",
  "serial": 31,
  "lineage": "e245597d-2119-9755-862a-79908b21c833",
  "resources": [
    {
      "module": "module.firewall",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "kubernetes_api",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "6443"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2025-04-23T08:45:14.402-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/scalewithlee/global/firewalls/kubernetes-api",
            "log_config": [],
            "name": "kubernetes-api",
            "network": "https://www.googleapis.com/compute/v1/projects/scalewithlee/global/networks/kubernetes-the-hard-way",
            "priority": 1000,
            "project": "scalewithlee",
            "self_link": "https://www.googleapis.com/compute/v1/projects/scalewithlee/global/firewalls/kubernetes-api",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.google_compute_network.kubernetes_network"
          ]
        }
      ]
    },
    {
      "module": "module.firewall",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "kubernetes_external",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2025-04-23T08:45:14.522-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/scalewithlee/global/firewalls/kubernetes-external",
            "log_config": [],
            "name": "kubernetes-external",
            "network": "https://www.googleapis.com/compute/v1/projects/scalewithlee/global/networks/kubernetes-the-hard-way",
            "priority": 1000,
            "project": "scalewithlee",
            "self_link": "https://www.googleapis.com/compute/v1/projects/scalewithlee/global/firewalls/kubernetes-external",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.google_compute_network.kubernetes_network"
          ]
        }
      ]
    },
    {
      "module": "module.firewall",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "kubernetes_internal",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [],
                "protocol": "icmp"
              },
              {
                "ports": [],
                "protocol": "tcp"
              },
              {
                "ports": [],
                "protocol": "udp"
              }
            ],
            "creation_timestamp": "2025-04-23T08:45:14.386-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/scalewithlee/global/firewalls/kubernetes-internal",
            "log_config": [],
            "name": "kubernetes-internal",
            "network": "https://www.googleapis.com/compute/v1/projects/scalewithlee/global/networks/kubernetes-the-hard-way",
            "priority": 1000,
            "project": "scalewithlee",
            "self_link": "https://www.googleapis.com/compute/v1/projects/scalewithlee/global/firewalls/kubernetes-internal",
            "source_ranges": [
              "10.240.0.0/24"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.google_compute_network.kubernetes_network"
          ]
        }
      ]
    },
    {
      "module": "module.instances",
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "vm_instances",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": "jumpbox",
          "schema_version": 6,
          "attributes": {
            "allow_stopping_for_update": true,
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "guest_os_features": [
                  "UEFI_COMPATIBLE",
                  "VIRTIO_SCSI_MULTIQUEUE",
                  "GVNIC",
                  "SEV_CAPABLE",
                  "SEV_LIVE_MIGRATABLE_V2"
                ],
                "initialize_params": [
                  {
                    "architecture": "X86_64",
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-12-bookworm-v20250415",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/scalewithlee/zones/us-central1-a/disks/jumpbox"
              }
            ],
            "can_ip_forward": true,
            "cpu_platform": "Intel Broadwell",
            "creation_timestamp": "2025-04-23T08:45:27.285-07:00",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "effective_labels": {
              "goog-terraform-provisioned": "true"
            },
            "enable_display": false,
            "id": "projects/scalewithlee/zones/us-central1-a/instances/jumpbox",
            "instance_id": "5903640341934028280",
            "label_fingerprint": "vezUS-42LLM=",
            "machine_type": "e2-micro",
            "metadata": {
              "ssh-keys": "kubernetes:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAACAQD0fLBwZPe6QFVjIrLFV6J7NBAcq7RUYdcnpSmKmOElmy3hu8Qjl+rvTnQzrM7gY53joFHYAyp9ohP3XOLTRlYIFQ/VWEJmhg17/SthBLdwB4Xf6prpsOU6wfMpIUI85mns94qy9iM/VUBMI1NFzdLMx4EqM5M7fi43K1J/0ciJ6H+ETl62okQDgjwlUF3t4eVSp5pYuM1JARwKLLlDk4hIFJv2giF4fYb0JBeTOocfcYHdGPWfezM+25wNw5Nqre5iPAnU9or9fGUu+yPZai8MCg99S+zVc+cjsMe3TSFeACJmRdNvHCVMEV6J4HALlLPeu8ozOskYscZxuqEJGS4RG8LCsyusn7kAl8RZQf8Z6Bn/XVOVBS+aiDHSx9amOd95D4O5cmqe1bTzC3yiTDvtIM5tRXSNEcx7HBeeBV [...]
            },
            "metadata_fingerprint": "2Kw9Vi_QkDY=",
            "name": "jumpbox",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.173.135.130",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/scalewithlee/global/networks/kubernetes-the-hard-way",
                "network_ip": "10.240.0.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/scalewithlee/regions/us-central1/subnetworks/kubernetes-the-hard-way-subnet",
                "subnetwork_project": "scalewithlee"
              }
            ],
            "project": "scalewithlee",
            "scheduling": [
              {
                "automatic_restart": true,
                "availability_domain": 0,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/scalewithlee/zones/us-central1-a/instances/jumpbox",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "jumpbox"
            ],
            "tags_fingerprint": "q5sVPqgssFA=",
            "terraform_labels": {
              "goog-terraform-provisioned": "true"
            },
            "zone": "us-central1-a"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_rsa"
              }
            ],
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ]
          ],
          "dependencies": [
            "module.instances.data.local_file.ssh_public_key",
            "module.network.google_compute_network.kubernetes_network",
            "module.network.google_compute_subnetwork.kubernetes_subnet"
          ]
        },
        {
          "index_key": "node-0",
          "schema_version": 6,
          "attributes": {
            "allow_stopping_for_update": true,
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "guest_os_features": [
                  "UEFI_COMPATIBLE",
                  "VIRTIO_SCSI_MULTIQUEUE",
                  "GVNIC",
                  "SEV_CAPABLE",
                  "SEV_LIVE_MIGRATABLE_V2"
                ],
                "initialize_params": [
                  {
                    "architecture": "X86_64",
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-12-bookworm-v20250415",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 20,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/scalewithlee/zones/us-central1-a/disks/node-0"
              }
            ],
            "can_ip_forward": true,
            "cpu_platform": "Intel Broadwell",
            "creation_timestamp": "2025-04-23T08:45:28.036-07:00",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "effective_labels": {
              "goog-terraform-provisioned": "true"
            },
            "enable_display": false,
            "id": "projects/scalewithlee/zones/us-central1-a/instances/node-0",
            "instance_id": "3648605971198293496",
            "label_fingerprint": "vezUS-42LLM=",
            "machine_type": "e2-small",
            "metadata": {
              "pod-cidr": "10.200.0.0/24",
              "ssh-keys": "kubernetes:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAACAQD0fLBwZPe6QFVjIrLFV6J7NBAcq7RUYdcnpSmKmOElmy3hu8Qjl+rvTnQzrM7gY53joFHYAyp9ohP3XOLTRlYIFQ/VWEJmhg17/SthBLdwB4Xf6prpsOU6wfMpIUI85mns94qy9iM/VUBMI1NFzdLMx4EqM5M7fi43K1J/0ciJ6H+ETl62okQDgjwlUF3t4eVSp5pYuM1JARwKLLlDk4hIFJv2giF4fYb0JBeTOocfcYHdGPWfezM+25wNw5Nqre5iPAnU9or9fGUu+yPZai8MCg99S+zVc+cjsMe3TSFeACJmRdNvHCVMEV6J4HALlLPeu8ozOskYscZxuqEJGS4RG8LCsyusn7kAl8RZQf8Z6Bn/XVOVBS+aiDHSx9amOd95D4O5cmqe1bTzC3yiTDvtIM5tRXSNEcx7HBeeBV [...]
            },
            "metadata_fingerprint": "s5YejZQoPFI=",
            "name": "node-0",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.72.169.157",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/scalewithlee/global/networks/kubernetes-the-hard-way",
                "network_ip": "10.240.0.4",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/scalewithlee/regions/us-central1/subnetworks/kubernetes-the-hard-way-subnet",
                "subnetwork_project": "scalewithlee"
              }
            ],
            "project": "scalewithlee",
            "scheduling": [
              {
                "automatic_restart": true,
                "availability_domain": 0,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/scalewithlee/zones/us-central1-a/instances/node-0",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "worker"
            ],
            "tags_fingerprint": "uvqiNQvnefU=",
            "terraform_labels": {
              "goog-terraform-provisioned": "true"
            },
            "zone": "us-central1-a"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ],
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_rsa"
              }
            ]
          ],
          "dependencies": [
            "module.instances.data.local_file.ssh_public_key",
            "module.network.google_compute_network.kubernetes_network",
            "module.network.google_compute_subnetwork.kubernetes_subnet"
          ]
        },
        {
          "index_key": "node-1",
          "schema_version": 6,
          "attributes": {
            "allow_stopping_for_update": true,
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "guest_os_features": [
                  "UEFI_COMPATIBLE",
                  "VIRTIO_SCSI_MULTIQUEUE",
                  "GVNIC",
                  "SEV_CAPABLE",
                  "SEV_LIVE_MIGRATABLE_V2"
                ],
                "initialize_params": [
                  {
                    "architecture": "X86_64",
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-12-bookworm-v20250415",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 20,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/scalewithlee/zones/us-central1-a/disks/node-1"
              }
            ],
            "can_ip_forward": true,
            "cpu_platform": "Intel Broadwell",
            "creation_timestamp": "2025-04-23T08:45:27.539-07:00",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "effective_labels": {
              "goog-terraform-provisioned": "true"
            },
            "enable_display": false,
            "id": "projects/scalewithlee/zones/us-central1-a/instances/node-1",
            "instance_id": "2781158306962781688",
            "label_fingerprint": "vezUS-42LLM=",
            "machine_type": "e2-small",
            "metadata": {
              "pod-cidr": "10.200.1.0/24",
              "ssh-keys": "kubernetes:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAACAQD0fLBwZPe6QFVjIrLFV6J7NBAcq7RUYdcnpSmKmOElmy3hu8Qjl+rvTnQzrM7gY53joFHYAyp9ohP3XOLTRlYIFQ/VWEJmhg17/SthBLdwB4Xf6prpsOU6wfMpIUI85mns94qy9iM/VUBMI1NFzdLMx4EqM5M7fi43K1J/0ciJ6H+ETl62okQDgjwlUF3t4eVSp5pYuM1JARwKLLlDk4hIFJv2giF4fYb0JBeTOocfcYHdGPWfezM+25wNw5Nqre5iPAnU9or9fGUu+yPZai8MCg99S+zVc+cjsMe3TSFeACJmRdNvHCVMEV6J4HALlLPeu8ozOskYscZxuqEJGS4RG8LCsyusn7kAl8RZQf8Z6Bn/XVOVBS+aiDHSx9amOd95D4O5cmqe1bTzC3yiTDvtIM5tRXSNEcx7HBeeBV [...]
            },
            "metadata_fingerprint": "VoyWM6U28bw=",
            "name": "node-1",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.30.238.189",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/scalewithlee/global/networks/kubernetes-the-hard-way",
                "network_ip": "10.240.0.3",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/scalewithlee/regions/us-central1/subnetworks/kubernetes-the-hard-way-subnet",
                "subnetwork_project": "scalewithlee"
              }
            ],
            "project": "scalewithlee",
            "scheduling": [
              {
                "automatic_restart": true,
                "availability_domain": 0,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/scalewithlee/zones/us-central1-a/instances/node-1",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "worker"
            ],
            "tags_fingerprint": "uvqiNQvnefU=",
            "terraform_labels": {
              "goog-terraform-provisioned": "true"
            },
            "zone": "us-central1-a"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ],
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_rsa"
              }
            ]
          ],
          "dependencies": [
            "module.instances.data.local_file.ssh_public_key",
            "module.network.google_compute_network.kubernetes_network",
            "module.network.google_compute_subnetwork.kubernetes_subnet"
          ]
        },
        {
          "index_key": "server",
          "schema_version": 6,
          "attributes": {
            "allow_stopping_for_update": true,
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "guest_os_features": [
                  "UEFI_COMPATIBLE",
                  "VIRTIO_SCSI_MULTIQUEUE",
                  "GVNIC",
                  "SEV_CAPABLE",
                  "SEV_LIVE_MIGRATABLE_V2"
                ],
                "initialize_params": [
                  {
                    "architecture": "X86_64",
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-12-bookworm-v20250415",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 20,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/scalewithlee/zones/us-central1-a/disks/server"
              }
            ],
            "can_ip_forward": true,
            "cpu_platform": "Intel Broadwell",
            "creation_timestamp": "2025-04-23T08:45:28.338-07:00",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "effective_labels": {
              "goog-terraform-provisioned": "true"
            },
            "enable_display": false,
            "id": "projects/scalewithlee/zones/us-central1-a/instances/server",
            "instance_id": "9107530600077899255",
            "label_fingerprint": "vezUS-42LLM=",
            "machine_type": "e2-small",
            "metadata": {
              "ssh-keys": "kubernetes:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAACAQD0fLBwZPe6QFVjIrLFV6J7NBAcq7RUYdcnpSmKmOElmy3hu8Qjl+rvTnQzrM7gY53joFHYAyp9ohP3XOLTRlYIFQ/VWEJmhg17/SthBLdwB4Xf6prpsOU6wfMpIUI85mns94qy9iM/VUBMI1NFzdLMx4EqM5M7fi43K1J/0ciJ6H+ETl62okQDgjwlUF3t4eVSp5pYuM1JARwKLLlDk4hIFJv2giF4fYb0JBeTOocfcYHdGPWfezM+25wNw5Nqre5iPAnU9or9fGUu+yPZai8MCg99S+zVc+cjsMe3TSFeACJmRdNvHCVMEV6J4HALlLPeu8ozOskYscZxuqEJGS4RG8LCsyusn7kAl8RZQf8Z6Bn/XVOVBS+aiDHSx9amOd95D4O5cmqe1bTzC3yiTDvtIM5tRXSNEcx7HBeeBV [...]
            },
            "metadata_fingerprint": "2Kw9Vi_QkDY=",
            "name": "server",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.10.234.65",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/scalewithlee/global/networks/kubernetes-the-hard-way",
                "network_ip": "10.240.0.5",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/scalewithlee/regions/us-central1/subnetworks/kubernetes-the-hard-way-subnet",
                "subnetwork_project": "scalewithlee"
              }
            ],
            "project": "scalewithlee",
            "scheduling": [
              {
                "automatic_restart": true,
                "availability_domain": 0,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/scalewithlee/zones/us-central1-a/instances/server",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "controller"
            ],
            "tags_fingerprint": "e2aTiSrlOyM=",
            "terraform_labels": {
              "goog-terraform-provisioned": "true"
            },
            "zone": "us-central1-a"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_rsa"
              }
            ],
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ]
          ],
          "dependencies": [
            "module.instances.data.local_file.ssh_public_key",
            "module.network.google_compute_network.kubernetes_network",
            "module.network.google_compute_subnetwork.kubernetes_subnet"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "google_compute_network",
      "name": "kubernetes_network",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "bgp_always_compare_med": false,
            "bgp_best_path_selection_mode": "LEGACY",
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/scalewithlee/global/networks/kubernetes-the-hard-way",
            "mtu": 0,
            "name": "kubernetes-the-hard-way",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "network_id": "1043899427923997713",
            "numeric_id": "1043899427923997713",
            "project": "scalewithlee",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/scalewithlee/global/networks/kubernetes-the-hard-way"
          }
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "kubernetes_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2025-04-23T08:45:14.521-07:00",
            "enable_flow_logs": false,
            "gateway_address": "10.240.0.1",
            "id": "projects/scalewithlee/regions/us-central1/subnetworks/kubernetes-the-hard-way-subnet",
            "ip_cidr_range": "10.240.0.0/24",
            "name": "kubernetes-the-hard-way-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/scalewithlee/global/networks/kubernetes-the-hard-way",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "scalewithlee",
            "purpose": "PRIVATE",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/scalewithlee/regions/us-central1/subnetworks/kubernetes-the-hard-way-subnet",
            "stack_type": "IPV4_ONLY",
            "subnetwork_id": 6318008440075892197
          },
          "dependencies": [
            "module.network.google_compute_network.kubernetes_network"
          ]
        }
      ]
    }
  ]
}